🐛💄 Fixed spacing between image and border

--- a/styles/Details.module.scss
+++ b/styles/Details.module.scss
@@ -22,8 +22,13 @@
             box-sizing: content-box;
             position: absolute;
 
-        span img {
-            object-fit: cover;
+            span {
+                position: static;
+
+                img {
+                    object-fit: cover;
+                }
+            }
         }
 
         .image1 {
